      Applications can explicitly set ``default_scheme="portable"`` to retain the old behavior.

    * The little-used method :meth:`~passlib.ifc.PasswordHash.genconfig` method
      will now always return a valid hash, rather than a truncated configuration
      hash or ``None``.  This should affect nearly 0 applications.

**1.6.6** (NOT YET RELEASED)
============================

    * :class:`~passlib.CryptContext` instances now pass contextual keywords (such as `"user"`)
      to the hashes that support them, but ignores them for hashes that don't.  This should
      fix :issue:`63`.

    * :mod:`passlib.ext.django` and unittests: compatibility fixes for Django 1.9,
      and some internal cleanups (fixes :issue:`68`).

**1.6.5** (2015-08-04)
======================

   Fixed some minor bugs in the test suite which were causing erroneous test failures
   (:issue:`57` and :issue:`58`). The passlib library itself is unchanged.
   
**1.6.4** (2015-07-25)
======================

    This release rolls up assorted bug & compatibility fixes since 1.6.2.

Bugfixes
--------

    * Correctly detect bcrypt 2.0.  Previous releases were incorrectly detecting it as py-bcrypt,
      causing spurious errors (:issue:`56`).

    * CryptContext now accepts scheme names as unicode (:issue:`54`).

    * :mod:`passlib.ext.django` now works correctly with Django 1.7-1.8. Previous
      releases had various test failures (:issue:`52`).

    * :class:`passlib.apache.HtpasswdFile` now recognizes bcrypt, sha256_crypt, sha512_crypt
      hashes (:issue:`55`).

BCrypt Changes
--------------

    A few changes have been made to the :class:`~passlib.hash.bcrypt` hash:

    * It now supports the ``$2b$`` hash format.

    * It will now issue a :exc:`~passlib.exc.PasslibSecurityWarning` if the active backend
      is vulnerable to the :ref:`wraparound bug <bsd-wraparound-bug>`,
      and automatically enable a workaround (py-bcrypt is known to be vulnerable as of v0.4).
